--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
+        <div class="first">
+            <div class="header">
+                <span>Header Logo</span>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+            <div class="first-left-content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <span>This is a placeholder for an image.</span>
+        </div>
     </body>
 </html>
