--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
                     <li>header link three</li>
                 </ul>
             </div>
-            <div class="first-left-content">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+            <div class="first-content">
+                <div class="first-left-content">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <span>This is a placeholder for an image.</span>
             </div>
-            <span>This is a placeholder for an image.</span>
         </div>
     </body>
 </html>
