--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
                 <span>This is a placeholder for an image.</span>
             </div>
         </div>
+        <div class="second">
+            <h2>Some random information</h2>
+            <div class="second-content">
+                <div class="ilustration-combo">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="ilustration-combo">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="ilustration-combo">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="ilustration-combo">
+                    <div></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
