Add basic layout to section 2.
Haven't really mess with colors or aesthetic things, but the layout
is sort of done. I just have to add the squares on top of each text.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="second">
-            <h2>Some random information</h2>
+            <h2>Some random information.</h2>
             <div class="second-content">
                 <div class="ilustration-combo">
                     <div></div>
