--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <h2>Some random information.</h2>
             <div class="second-content">
                 <div class="ilustration-combo">
-                    <div></div>
+                    <div class="illustration"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="ilustration-combo">
-                    <div></div>
+                    <div class="illustration"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="ilustration-combo">
-                    <div></div>
+                    <div class="illustration"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="ilustration-combo">
-                    <div></div>
+                    <div class="illustration"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
