--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
         </div>
         <div class="fourth">
             <div class="fourth-content">
-               <span>Call to action! It's time!</span> 
-               <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="fourth-right-content">
+                    <span>Call to action! It's time!</span> 
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+               <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
     </body>
 </html>
