Finish footer and website; missing README

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
             <div class="header">
                 <span>Header Logo</span>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
                 </ul>
             </div>
             <div class="first-content">
                 <div class="first-left-content">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button>Sign up</button>
+                    <button><a href="">Sign up</a></button>
                 </div>
                 <span>This is a placeholder for an image.</span>
             </div>
@@ -58,8 +58,11 @@
                     <span>Call to action! It's time!</span> 
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-               <button>Sign up</button>
+               <button><a href="">Sign up</a></button>
             </div>
+        </div>
+        <div class="footer">
+            Copyright © The Odin Project 2024
         </div>
     </body>
 </html>
